--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-      - name: Set up Java
+      - name: Set up Java 1.8
         uses: actions/setup-java@v3
         with:
           java-version: '8.0'
@@ -24,10 +24,19 @@ jobs:
         run: ./gradlew test
       - name: Build test coverage report
         run: ./gradlew jacocoTestReport
-      - name: Send test coverage report to CodeCov
-        run: |
-          bash <(curl -s https://codecov.io/bash)
-          bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r build/reports/jacoco/test/jacocoTestReport.xml
+#      - name: Send test coverage report Codacy
+#        uses: codacy/codacy-coverage-reporter-action@v1
+#        with:
+#          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+    # or
+    # api-token: ${{ secrets.CODACY_API_TOKEN }}
+#          coverage-reports: <PATH_TO_REPORT>
+    # or a comma-separated list for multiple reports
+    # coverage-reports: <PATH_TO_REPORT>, <PATH_TO_REPORT>
+#      - name: Send test coverage report to CodeCov
+#        run: |
+#          bash <(curl -s https://codecov.io/bash)
+#          bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r build/reports/jacoco/test/jacocoTestReport.xml
       # run – произвольная bash-команда
       # ls -la выведет содержимое текущего репозитория
       - run: ls -la
