--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -24,37 +24,9 @@ jobs:
         run: ./gradlew test
       - name: Build test coverage report
         run: ./gradlew jacocoTestReport
-#      - name: Send test coverage report Codacy
-#        uses: codacy/codacy-coverage-reporter-action@v1
-#        with:
-#          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-    # or
-    # api-token: ${{ secrets.CODACY_API_TOKEN }}
-#          coverage-reports: <PATH_TO_REPORT>
-    # or a comma-separated list for multiple reports
-    # coverage-reports: <PATH_TO_REPORT>, <PATH_TO_REPORT>
-#      - name: Send test coverage report to CodeCov
-#        run: |
-#          bash <(curl -s https://codecov.io/bash)
-#          bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r build/reports/jacoco/test/jacocoTestReport.xml
-      # run – произвольная bash-команда
-      # ls -la выведет содержимое текущего репозитория
+      - name: Send test coverage report Codacy
+        uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+#          coverage-reports: ./build/repo
       - run: ls -la
-
-
-#      - checkout
-#
-#      - run:
-#          name: Run build
-#          command: ./gradlew compileJava compileTestJava --stacktrace
-#      - run:
-#          name: Run tests
-#          command: ./gradlew test
-#      - run:
-#          name: Test coverage report
-#          command: ./gradlew jacocoTestReport
-#      - run:
-#          name: Send test coverage report to CodeCov
-#          command: |
-#            bash <(curl -s https://codecov.io/bash)
-#            bash <(curl -Ls https://coverage.codacy.com/get.sh) report -r build/reports/jacoco/test/jacocoTestReport.xml
