--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -1,7 +1,7 @@
 name: build-ci
 on: push
 jobs:
-  build:
+  build-java-8:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -25,3 +25,37 @@ jobs:
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: build/reports/jacoco/test/jacocoTestReport.xml
+  build-java-11:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Set up Java 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      - name: Run a build
+        run: ./gradlew compileJava --stacktrace
+      - name: Run tests
+        run: ./gradlew test
+  build-java-21:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - name: Set up Java 21
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      - name: Run a build
+        run: ./gradlew compileJava --stacktrace
+      - name: Run tests
+        run: ./gradlew test
