--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '8.0'
-          distribution: 'temurin'
+          distribution: 'corretto'
       - name: Run a build
         run: ./gradlew compileJava --stacktrace
       - name: Run tests
@@ -37,7 +37,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '11'
-          distribution: 'temurin'
+          distribution: 'corretto'
       - name: Run a build
         run: ./gradlew compileJava --stacktrace
       - name: Run tests
@@ -54,7 +54,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '21'
-          distribution: 'temurin'
+          distribution: 'corretto'
       - name: Run a build
         run: ./gradlew compileJava --stacktrace
       - name: Run tests
