--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           java-version: '8.0'
           distribution: 'oracle'
+          cache: 'gradle'
       - name: Run a build
         run: ./gradlew compileJava --stacktrace
       - name: Run tests
@@ -38,11 +39,12 @@ jobs:
         with:
           java-version: '11'
           distribution: 'oracle'
+          cache: 'gradle'
       - name: Run a build
         run: ./gradlew compileJava --stacktrace
       - name: Run tests
         run: ./gradlew test
-  build-java-21:
+  build-java-17:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -50,11 +52,12 @@ jobs:
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
-      - name: Set up Java 21
+      - name: Set up Java 17
         uses: actions/setup-java@v3
         with:
-          java-version: '21'
+          java-version: '17'
           distribution: 'oracle'
+          cache: 'gradle'
       - name: Run a build
         run: ./gradlew compileJava --stacktrace
       - name: Run tests
