--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '8.0'
-          distribution: 'oracle'
+          distribution: 'corretto'
           cache: 'gradle'
       - name: Run a build
         run: ./gradlew compileJava --stacktrace
@@ -38,7 +38,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '11'
-          distribution: 'oracle'
+          distribution: 'corretto'
           cache: 'gradle'
       - name: Run a build
         run: ./gradlew compileJava --stacktrace
@@ -56,7 +56,7 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'oracle'
+          distribution: 'corretto'
           cache: 'gradle'
       - name: Run a build
         run: ./gradlew compileJava --stacktrace
