--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -1,7 +1,7 @@
 name: github-ci
 on: push
 jobs:
-  build-java-8:
+  java-8:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -26,7 +26,7 @@ jobs:
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: build/reports/jacoco/test/jacocoTestReport.xml
-  build-java-11:
+  java-11:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -44,7 +44,7 @@ jobs:
         run: ./gradlew compileJava --stacktrace
       - name: Run tests
         run: ./gradlew test
-  build-java-17:
+  java-17:
     runs-on: ubuntu-latest
     permissions:
       contents: read
