--- a/.github/workflows/test-ci.yml
+++ b/.github/workflows/test-ci.yml
@@ -5,40 +5,11 @@ jobs:
     uses: oleg-cherednik/github-workflows/.github/workflows/build.yml@main
     with:
       java-version: '8'
-
-#  java-11:
-#    runs-on: ubuntu-latest
-#    permissions:
-#      contents: read
-#      packages: write
-#    steps:
-#      - name: Check out repository code
-#        uses: actions/checkout@v4
-#      - name: Set up Java 11
-#        uses: actions/setup-java@v3
-#        with:
-#          java-version: '11'
-#          distribution: 'corretto'
-#          cache: 'gradle'
-#      - name: Run a build
-#        run: ./gradlew compileJava --stacktrace
-#      - name: Run tests
-#        run: ./gradlew test
-#  java-17:
-#    runs-on: ubuntu-latest
-#    permissions:
-#      contents: read
-#      packages: write
-#    steps:
-#      - name: Check out repository code
-#        uses: actions/checkout@v4
-#      - name: Set up Java 17
-#        uses: actions/setup-java@v3
-#        with:
-#          java-version: '17'
-#          distribution: 'corretto'
-#          cache: 'gradle'
-#      - name: Run a build
-#        run: ./gradlew compileJava --stacktrace
-#      - name: Run tests
-#        run: ./gradlew test
+  java-11:
+    uses: oleg-cherednik/github-workflows/.github/workflows/build.yml@main
+    with:
+      java-version: '11'
+  java-17:
+    uses: oleg-cherednik/github-workflows/.github/workflows/build.yml@main
+    with:
+      java-version: '17'
