--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -1,67 +1,17 @@
-name: github-ci
-#on: push
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+name: Build and run tests under Java versions
+on: push
 jobs:
   java-8:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - name: Set up Java 1.8
-        uses: actions/setup-java@v3
-        with:
-          java-version: '8'
-          distribution: 'corretto'
-          cache: 'gradle'
-      - name: Run a build
-        run: ./gradlew compileJava --stacktrace
-      - name: Run tests
-        run: ./gradlew test
-      - name: Build test coverage report
-        run: ./gradlew jacocoTestReport
-      - name: Send test coverage report Codacy
-        uses: codacy/codacy-coverage-reporter-action@v1
-        with:
-          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
-          coverage-reports: build/reports/jacoco/test/jacocoTestReport.xml
+    uses: oleg-cherednik/github-workflows/.github/workflows/gradle-java-build-test.yml@main
+    with:
+      java-version: '8'
+      codacy-report: true
+    secrets: inherit
   java-11:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - name: Set up Java 11
-        uses: actions/setup-java@v3
-        with:
-          java-version: '11'
-          distribution: 'corretto'
-          cache: 'gradle'
-      - name: Run a build
-        run: ./gradlew compileJava --stacktrace
-      - name: Run tests
-        run: ./gradlew test
+    uses: oleg-cherednik/github-workflows/.github/workflows/gradle-java-build-test.yml@main
+    with:
+      java-version: '11'
   java-17:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - name: Set up Java 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'corretto'
-          cache: 'gradle'
-      - name: Run a build
-        run: ./gradlew compileJava --stacktrace
-      - name: Run tests
-        run: ./gradlew test
+    uses: oleg-cherednik/github-workflows/.github/workflows/gradle-java-build-test.yml@main
+    with:
+      java-version: '17'
