--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -2,16 +2,16 @@ name: Build and tests
 on: push
 jobs:
   java-8:
-    uses: oleg-cherednik/github-workflows/.github/workflows/gradle-java-build-test.yml@main
+    uses: oleg-cherednik/github-workflows/workflows/gradle-java-build-test.yml@main
     with:
       java-version: '8'
       codacy-report: true
     secrets: inherit
   java-11:
-    uses: oleg-cherednik/github-workflows/.github/workflows/gradle-java-build-test.yml@main
+    uses: oleg-cherednik/github-workflows/workflows/gradle-java-build-test.yml@main
     with:
       java-version: '11'
   java-17:
-    uses: oleg-cherednik/github-workflows/.github/workflows/gradle-java-build-test.yml@main
+    uses: oleg-cherednik/github-workflows/workflows/gradle-java-build-test.yml@main
     with:
       java-version: '17'
