--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,8 @@ pmd {
 }
 
 dependencies {
+    annotationProcessor "org.projectlombok:lombok:${property('lombok.version')}"
+
     api 'ru.oleg-cherednik.json:json-api:666'
 
     compileOnly "com.fasterxml.jackson.core:jackson-databind:${property('jackson.version')}"
@@ -64,7 +66,7 @@ dependencies {
     compileOnly "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:${property('jackson.version')}"
     compileOnly "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${property('jackson.version')}"
 
-    annotationProcessor 'org.projectlombok:lombok:1.18.30'
+    testAnnotationProcessor "org.projectlombok:lombok:${property('lombok.version')}"
 
     testImplementation('org.testng:testng:7.5.1') {
         exclude group: 'junit', module: 'junit'
@@ -80,8 +82,6 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'commons-io:commons-io:2.15.0'
     testImplementation 'org.mockito:mockito-core:4.11.0'
-
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
 
 jacocoTestReport {
