--- a/build.gradle
+++ b/build.gradle
@@ -39,11 +39,18 @@ configurations {
 }
 
 checkstyle {
+    toolVersion = '10.10.0'
     configFile = "${projectDir}/misc/checkstyle/checkstyle.xml" as File
+    ignoreFailures = false
+    maxWarnings = 0
+    maxErrors = 0
 }
 
 pmd {
+    toolVersion = '6.21.0'
+    consoleOutput = true
     rulesMinimumPriority = 5
+    ignoreFailures = false
     ruleSets = [
             "${projectDir}/misc/pmd/bestpractices.xml",
             "${projectDir}/misc/pmd/codestyle.xml",
@@ -53,6 +60,26 @@ pmd {
             "${projectDir}/misc/pmd/performance.xml",
             "${projectDir}/misc/pmd/security.xml"
     ]
+}
+
+checkstyleMain {
+    enabled = true
+    source = 'src/main/java'
+}
+
+checkstyleTest {
+    enabled = true
+    source = 'src/test/java'
+}
+
+pmdMain {
+    enabled = true
+    source = 'src/main/java'
+}
+
+pmdTest {
+    enabled = true
+    source = 'src/test/java'
 }
 
 dependencies {
